mobile/mobile-header.css
* {
    box-sizing: border-box;
}

body {
    margin: 0;
    background: #fffef8;
}

header {
    margin: 0;
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    display: flex;
    justify-content: space-between;
    flex-direction: column;
    z-index: 9999;
}

.mid-border{
    display: none;
}

.first-section {
    margin: 0;
    padding-left: 13rem;
    padding-right: 13rem;   
    display: flex;
    background-color: #003aab;
    color: white;
    justify-content: space-evenly;
    flex: 1;
    align-items: center;
}

.first-section-info-links-left {
    display: none;
}

.first-section-info-middle {
    display: flex;
    justify-content: space-evenly;
    flex: 1;
    font-size: 0.7rem;
    font-family: "National Park", sans-serif;
}

.first-section-info-links-right {   
    display: none;
}


.second-section {
    background: #fffef8;
    display: flex;
    padding: 1rem 1rem 0 1rem;
    flex: 1;
    justify-content: space-evenly;
    font-family: Arial, Helvetica, sans-serif;
}

.second-section-desktop-menu {
    display: none;
}

.menu-icon-left {
    font-size: 2rem;
}

.menu-icon-right {
    display: none;

}

.left-content {
    display: flex;
    align-items: center;
}

.search-bar {
    display: none;
}



@media (width >=39.375rem) {
    .first-section-info-middle {
        font-size: 0.9rem;
    }
}

